syntax = "proto3";

package pb;

option go_package = "dineflow-order-service/pb";

message CreateOrderRequest {
  message OrderMenu {
    string MenuId = 1;
    float Price = 2;
    int32 Amount = 3;
    string Request = 4;
  }
  string Status = 1;
  string VendorId = 2;
  repeated OrderMenu OrderMenus = 3; 
  string UserId = 4;
}
